--- a/src/Klinkby.Borigo2iCal.Function/Klinkby.Borigo2iCal.Function.csproj
+++ b/src/Klinkby.Borigo2iCal.Function/Klinkby.Borigo2iCal.Function.csproj
@@ -7,6 +7,9 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.2.0"/>
     </ItemGroup>
+    <PropertyGroup>
+        <_FunctionsSkipCleanOutput>true</_FunctionsSkipCleanOutput>
+    </PropertyGroup>
     <ItemGroup>
         <None Update="host.json">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
