--- a/src/Klinkby.Borigo2iCal/Klinkby.Borigo2iCal.csproj
+++ b/src/Klinkby.Borigo2iCal/Klinkby.Borigo2iCal.csproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="restsharp" Version="110.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
+    <PackageReference Include="RestSharp" Version="110.2.0" />
   </ItemGroup>
 
 </Project>
