--- a/src/Klinkby.Borigo2iCal/Klinkby.Borigo2iCal.csproj
+++ b/src/Klinkby.Borigo2iCal/Klinkby.Borigo2iCal.csproj
@@ -1,15 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <LangVersion>10</LangVersion>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net6.0</TargetFramework>
+        <LangVersion>10</LangVersion>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
-    <PackageReference Include="RestSharp" Version="110.2.0" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Klinkby.VCard" Version="1.0.2.2"/>
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0"/>
+        <PackageReference Include="RestSharp" Version="110.2.0"/>
+    </ItemGroup>
 
 </Project>
