--- a/src/Klinkby.Borigo2iCal.Function/Klinkby.Borigo2iCal.Function.csproj
+++ b/src/Klinkby.Borigo2iCal.Function/Klinkby.Borigo2iCal.Function.csproj
@@ -5,6 +5,7 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
         <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.2.0"/>
     </ItemGroup>
     <PropertyGroup>
