--- a/src/Klinkby.Borigo2iCal/Klinkby.Borigo2iCal.csproj
+++ b/src/Klinkby.Borigo2iCal/Klinkby.Borigo2iCal.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
         <PackageReference Include="Klinkby.VCard" Version="1.0.2.2"/>
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0"/>
+        <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
         <PackageReference Include="RestSharp" Version="110.2.0"/>
     </ItemGroup>
 
